# app_template

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.py  trial_plugins.ipynb  uppercase.py
cookiecutter-cogent3-plugin/: cookiecutter.json
cookiecutter-cogent3-plugin/hooks/: post_gen_project.py
cookiecutter-cogent3-plugin/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
cookiecutter-cogent3-plugin/{{ cookiecutter.project_slug }}/docs/: trial_plugins.ipynb
cookiecutter-cogent3-plugin/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
docs/: trial_plugins.ipynb
src/upper/: uppercase.py
tests/: test_upper_installed.py
